frame/support/test/tests/pallet_ui/call_weight_inherited_invalid2.stderr
error: unexpected token
  --> tests/pallet_ui/call_weight_inherited_invalid2.rs:19:48
   |
19 |     #[pallet::call(impl <T as Config>::WeightInfo 654)]
   |                                                   ^^^
